--- a/dezincekciya/bloh.html
+++ b/dezincekciya/bloh.html
@@ -29,11 +29,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="../our_services.html" class="top_menu_link">Наши услуги</a>
-                    <a href="../about_us.html" class="top_menu_link">О нас</a>
-                    <a href="../comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="../methods_work.html" class="top_menu_link">Методы работы</a>
-                    <a href="../question-answer.html" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="about_us.html" class="top_menu_link">О нас</a>
+                    <a href="comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -58,27 +58,81 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deratizaciya.html">Дератизация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../phymigaciya.html">Фумигация</a>
-                            </li>  
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="../dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="../dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="../deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="../deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="../deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="../deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="../desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="../desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="../desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="../deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="../phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="../phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="../phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="../for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>                      <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li> 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -90,7 +144,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/диван_комната.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/диван\ комната\ .jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -234,14 +288,20 @@
             <div class="hr"></div>
             <p class="text_on_page_bloh__text">Мы используем только химические средства для обработки квартиры от блох, так как они доказали свою эффективность – действуют не только в момент непосредственной обработки помещения, но и 2 недели после нее. Препараты абсолютно безопасны для людей и домашних животных, так как их дозировка строго рассчитывается специалистом. Именно поэтому средства не встретить в свободной продаже — человек без навыков и опыта может навредить себе и своим близким. </p>
             <p class="text_on_page_bloh__gallary">
-                <img src="../img/блохи (1).jpg" class="text_on_page_bloh__img">
-                <img src="../img/блохи (2).jpg" class="text_on_page_bloh__img">
+                <img src="../img/обработка от блох 2.jpg" class="text_on_page_bloh__img">
+                <img src="../img/обработка от блох. 2jpg (1).jpg" class="text_on_page_bloh__img">
+                <img src="../img/dezinsekciya-pomesheniy (1).jpg" class="text_on_page_bloh__img">
             </p>
             <div class="hr"></div>
             <p class="text_on_page_bloh__main_text">Обработка квартиры от блох состоит из трех этапов:</p>
             <p class="text_on_page_bloh__text mb-0"><strong>1. Первый этап </strong>- вычисление пути проникновения насекомых в дом. Домашнего питомца необходимо мыть после каждой прогулки. Если он из дома не выходит, а блохи при этом появились в квартире, необходимо осмотреть уличную одежду и обувь.</p>
             <p class="text_on_page_bloh__text mb-0"><strong>2. Второй этап </strong>- непосредственная обработка. Осуществляется с помощью опрыскивания и методами горячего и холодного тумана. Первый способ эффективен при обнаружении видимых колоний насекомых, второй и третий – при уничтожении блох в местах, до которых изначально невозможно дотянуться.</p>
             <p class="text_on_page_bloh__text mb-0"><strong>3. Третий этап </strong>- профилактика, направленная на предотвращение повторного появления насекомых. Она достаточно простая – необходимо поддерживать порядок в помещении и регулярно делать влажную уборку. Для питомца приобретите специальный ошейник.</p>
+            <p class="text_on_page_bloh__gallary">
+                <img src="../img/блоха 3.jpg" class="text_on_page_bloh__img">
+                <img src="../img/блохи на собаке 2.jpg" class="text_on_page_bloh__img">
+                <img src="../img/обработка от блох (2).jpg" class="text_on_page_bloh__img">
+            </p>
             <div class="hr"></div>
             <p class="text_on_page_bloh__main_text">Служба по уничтожению блох — это гарантия результата!</p>
             <div class="hr"></div>
