--- a/dezincekciya/komary.html
+++ b/dezincekciya/komary.html
@@ -47,7 +47,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <div class="container-fluid">
 
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="../index.html">
                         <img src="../img/logo.jpg" width="60px" height="60px" alt="Логотип сайта">
                         <span class="navbar-title" style="color:  rgb(255, 109, 0);" >ДЕЗСАН</span>
                     </a>
@@ -58,27 +58,82 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deratizaciya.html">Дератизация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../phymigaciya.html">Фумигация</a>
-                            </li>  
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="../dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="../dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="../deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="../deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="../deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="../deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="../desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="../desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="../desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="../deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="../phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="../phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="../phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="../for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>                      </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li> 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -90,7 +145,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(../img/КОМАРЫ\ главная.jpg);">
+    <div class="container-fluid first_block__photo" style="background-image: url(../img/комар.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -200,11 +255,12 @@
     <!-- НАЧАЛО -->
     <div class="container main_text_on_page_komary__container">
         <div class="main_text_on_page_komary__content">
+            <p class="text_on_page_komary__main_text">Как работает служба дезинсекции от комаров</p>
+            <div class="hr"></div>
             <p class="text_on_page_komary__gallary">
-                <img src="../img/обработка_комаров (1).jpg" class="text_on_page_komary__img">
-                <img src="../img/обработка_комаров (2).jpg" class="text_on_page_komary__img">
-                <img src="../img/обработка_комаров (3).jpg" class="text_on_page_komary__img">
-                <div class="hr"></div>
+                <img src="../img/обработка от комаров 2 (1).jpg" class="text_on_page_komary__img">
+                <img src="../img/дезинсекция комар 1.jpg" class="text_on_page_komary__img">
+                <img src="../img/оюработка от комаров (1).jpg" class="text_on_page_komary__img">
             </p>
             <p class="text_on_page_komary__text mb-0"><strong>1.</strong> Вы оставляете заявку на дезинсекцию от комаров. </p>
             <p class="text_on_page_komary__text mb-0"><strong>2.</strong> Сотрудники компании связываются с Вами, чтобы узнать больше об объекте и сориентировать по стоимости работ. </p>
@@ -219,6 +275,9 @@
             <div class="hr"></div>
             <p class="text_on_page_komary__main_text">Почему самостоятельное уничтожение комаров не работает?</p>
             <div class="hr"></div>
+            <p class="text_on_page_komary__gallary text-center">
+                <img src="../img/комар 3 (1).jpg" class="text_on_page_komary__img">
+            </p>
             <p class="text_on_page_komary__text">В первую очередь потому, что в свободной продаже просто нет действительно эффективных средств для обработки от комаров. Объясняется это очень просто — подобные препараты необходимо использовать с умом, иначе вы можете навредить имуществу, растениям на участке или даже своим близким.</p>
             <p class="text_on_page_komary__text">Все средства, которые предлагают нам в магазинах направлены на кратковременную защиту тела и/или одежды. Они действительно работают во время прогулок или непродолжительного отдыха в местах скопления комаров, но быстро заканчиваются и не имеют действительно пролонгированного действия.</p>
             <p class="text_on_page_komary__text">Самостоятельная обработка участка от комаров также не приведет к результату, ведь кроме профессиональных средств, дезинсекторы обладают и необходимыми знаниями — где именно искать кладки комаров и их личинки, в каких местах необходимо обработать территорию более тщательно и т.п.</p>
