--- a/deratizaciya/krisa.html
+++ b/deratizaciya/krisa.html
@@ -29,11 +29,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="../our_services.html" class="top_menu_link">Наши услуги</a>
-                    <a href="../about_us.html" class="top_menu_link">О нас</a>
-                    <a href="../comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="../methods_work.html" class="top_menu_link">Методы работы</a>
-                    <a href="../question-answer.html" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="about_us.html" class="top_menu_link">О нас</a>
+                    <a href="comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -58,27 +58,82 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deratizaciya.html">Дератизация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../phymigaciya.html">Фумигация</a>
-                            </li>  
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="../dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="../dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="../deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="../deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="../deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="../deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="../desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="../desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="../desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="../deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="../phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="../phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="../phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="../for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>                      </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li> 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -202,6 +257,9 @@
             <div class="hr"></div>
             <p class="text_on_page_krisa__main_text">Чем опасны крысы для человека?</p>
             <div class="hr"></div>
+            <p class="text_on_page_krisa__gallary text-center">
+                <img src="../img/крыса 3.jpg" class="text_on_page_krisa__img">
+            </p>
             <p class="text_on_page_krisa__text">Кроме материального ущерба, крысы могут нанести вполне физический — от серьезного укуса до сгоревшего дома. Дело в том, что они активно грызут разнообразные провода и кабели, что в итоге может привести к пожару. И если в этот момент никого не будет рядом, то с большой вероятностью вы вернетесь уже к остаткам сгоревшего имущества. </p>
             <p class="text_on_page_krisa__text">Не менее опасно и то, что крысы являются переносчиком многих опасных заболеваний, которые тяжело поддаются лечению и могут привести к летальному исходу. </p>
             <p class="text_on_page_krisa__text">Вот только несколько инфекций, которыми чревато присутствие грызунов в вашем доме:</p>
@@ -244,6 +302,9 @@
             <div class="hr"></div>
             <p class="text_on_page_krisa__main_text">В каких случаях борьба с крысами является обязательной? </p>
             <div class="hr"></div>
+            <p class="text_on_page_krisa__gallary text-center">
+                <img src="../img/крыса 2.jpg" class="text_on_page_krisa__img">
+            </p>
             <p class="text_on_page_krisa__text">Собственное здоровье и благополучие близких людей — это полностью ваша ответственность и никто не сможет вас заставить начать уничтожение крыс в доме, если вы этого не хотите.</p>
             <p class="text_on_page_krisa__text">Совсем иначе обстоит дело с коммерческими организациями. Обязаны проводить профилактические и истребительные мероприятия направленные на уничтожение крыс:</p>
             <ul class="text_on_page_krisa__ul">
@@ -293,6 +354,9 @@
             </p>
             <p class="text_on_page_krisa__main_text">Самостоятельная борьба с крысами.</p>
             <div class="hr"></div>
+            <p class="text_on_page_krisa__gallary text-center">
+                <img src="../img/крыса 6.jpg" class="text_on_page_krisa__img">
+            </p>
             <p class="text_on_page_krisa__text">Существует ошибочное и опасное заблуждение — можно самостоятельно справиться с грызунами, это совсем не сложно. Во-первых, в лучшем случае вы сможете избавиться от части крыс, но никак не от полного поголовья, а во-вторых, это может быть еще и весьма опасно.</p>
             <div class="hr"></div>
             <p class="text_on_page_krisa__main_text">Почему самостоятельное уничтожение крыс малоэффективно?</p>
