--- a/deratizaciya/krot.html
+++ b/deratizaciya/krot.html
@@ -29,11 +29,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="../our_services.html" class="top_menu_link">Наши услуги</a>
-                    <a href="../about_us.html" class="top_menu_link">О нас</a>
-                    <a href="../comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="../methods_work.html" class="top_menu_link">Методы работы</a>
-                    <a href="../question-answer.html" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="about_us.html" class="top_menu_link">О нас</a>
+                    <a href="comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -58,27 +58,82 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deratizaciya.html">Дератизация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../phymigaciya.html">Фумигация</a>
-                            </li>  
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="../dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="../dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="../deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="../deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="../deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="../deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="../desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="../desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="../desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="../deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="../phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="../phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="../phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="../for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>                      </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li> 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -201,6 +256,9 @@
     <div class="container main_text_on_page_krot__container">
         <div class="main_text_on_page_krot__content">
             <div class="hr"></div>
+            <p class="text_on_page_krot__gallary text-center">
+                <img src="../img/крот 2.jpg" class="text_on_page_krot__img">
+            </p>
             <p class="text_on_page_krot__text">На первый взгляд кроты могут показаться не самыми проблемными соседями, поэтому многие хозяева дачных участков не торопятся начинать обработку, тем более профессиональными средствами. Однако, пока вы размышляете об их вреде и необходимости уничтожения, вредители выкорчевывают одни растения и повреждают корни других. В результате, к моменту заказа службы по уничтожению кротов, часть вашего газона или цветочных клумб оказываются безвозвратно испорченными. </p>
             <p class="text_on_page_krot__text">Живут кроты большими семействами. Заметили одного гостя? Ждите в скором времени новых. Если вредители завелись весной, то принимать меры по выселению стоит поскорее — в это время поголовье кротов как раз увеличивается.</p>
             <p class="text_on_page_krot__main_text">Сколько раз нужно обрабатывать участок? </p>
@@ -239,6 +297,11 @@
             <div class="hr"></div>
             <p class="text_on_page_krot__main_text">С нами не только надежно, но и удобно</p>
             <div class="hr"></div>
+            <p class="text_on_page_krot__gallary text-center">
+                <img src="../img/крот 3.jpg" class="text_on_page_krot__img">
+                <img src="../img/крот 4.jpg" class="text_on_page_krot__img">
+                <img src="../img/крот 5.jpg" class="text_on_page_krot__img">
+            </p>
             <p class="text_on_page_krot__text">Позвоните по телефону ☎ <a href="tel:+380503559950" class="enter__link"> +38(050)-355-99-50 </a> или заполните форму обратной связи, чтобы специалисты компании смогли сориентировать вас по цене и сразу записать на удобные дату и время.</p>
             <p class="text_on_page_krot__text">Мы работаем 24 часа в сутки без выходных, поэтому всегда сможем найти наиболее удобный для вас момент!</p>
         </div>
