--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/IMG_2236.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/index_photo1.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>ПОЛНОЕ ИЗБАВЛЕНИЕ ОТ ВРЕДИТЕЛЕЙ!</h5>
                         <p>Быстро. Качественно. Надежно.</p>
                     </div> -->
                 </div>    
                 <div class="carousel-item">
-                    <img src="img/EA20CC28-1E20-4C41-B5AB-6FD68E51A79D.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/index_photo2.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Заботимся о Вашей безопасности</h5>
                     </div> -->
                 </div>
                 <div class="carousel-item">
-                <img src="img/IMG_2238.jpg" class="d-block carousel_img w-100" alt="...">
+                    <img src="img/index_photo3.jpg" class="d-block carousel_img w-100" alt="...">
                     <!-- <div class="carousel-caption d-none d-md-block">
                         <h5>Гарантируем результат!</h5>
                     </div> -->
